add KookScheduledService